--- a/_drafts/2017-12-20-node-gc.md
+++ b/_drafts/2017-12-20-node-gc.md
@@ -3,7 +3,7 @@ layout:     post
 title:      解读V8 GC
 subtitle:   Node.js 应用背景与 GC 基础知识
 date:       2017-12-20
-author:     "toshiba"
+author:     "binn"
 header-img: "images/bg/batman/bat8.jpg"
 comments: true
 
