--- a/_posts/2020-04-01-text.md
+++ b/_posts/2020-04-01-text.md
@@ -1,19 +1,18 @@
 ---
 layout:     post
-title:      HTML面试题 
-subtitle:   一些常见HTML面试题总结
-date:       2018-09-11
+title:      example
+subtitle:   增加blog文章的测试版
+date:       2020-04-01
 author:     "binn"
 header-img: "https://i.loli.net/2020/04/01/OGmz4tWRHn2ql7D.jpg"
 comments: true
 
 tags :
+    - 基础
     - 面试
-    - HTML
+    - HSTS
 
 categories:
     - 面试
 ---
-
-
-## HTML
+这是我新加的内容
