--- a/_posts/2017-10-20-git-base.md
+++ b/_posts/2017-10-20-git-base.md
@@ -3,8 +3,8 @@ layout:     post
 title:      "git的使用教程(一)"
 subtitle:   "git的初级教程(简明指南)"
 date:       2017-10-12
-author:     "toshiba"
-header-img: "images/bg/batman/bat3.jpg"
+author:     "binn"
+header-img: "https://i.loli.net/2020/04/01/OGmz4tWRHn2ql7D.jpg"
 tags:
     - 工具
     - git
