--- a/_posts/2019-11-12-js-array.md
+++ b/_posts/2019-11-12-js-array.md
@@ -3,8 +3,8 @@ layout:     post
 title:      JavaScript内置对象之数组
 subtitle:   JavaScript内置对象之数组
 date:       2019-11-12
-author:     "toshiba"
-header-img: "images/bg/batman/bat8.jpg"
+author:     "binn"
+header-img: "https://i.loli.net/2020/04/01/OGmz4tWRHn2ql7D.jpg"
 comments: true
 
 tags :
