:sparkles: feat(blog): 增加了面试题的一些文章
Signed-off-by: liutongbin <liutongbin@gmail.com>

--- a/_posts/2020-04-01-text.md
+++ b/_posts/2020-04-01-text.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      example
-subtitle:   增加blog文章的测试版
+title:      es6常见问题
+subtitle:   es6增加了一些新的方法与类型
 date:       2020-04-01
 author:     "binn"
 header-img: "https://i.loli.net/2020/04/01/OGmz4tWRHn2ql7D.jpg"
@@ -15,4 +15,10 @@ tags :
 categories:
     - 面试
 ---
-这是我新加的内容
+### es6的promise：
+看似同步的代码，解决异步问题，跳出回调地狱；一个promise是一个等待被执行的对象，当他执行完毕之后，其状态会变成resolved或者rejected;promise是同步的，then是异步的；  
+
+es6处理异步的请求：promise和async-await
+### es6的symbol：
+这是一种新的数据类型，他的值是唯一的不可变的，是独一无二的值；  
+[*详解*](http://es6.ruanyifeng.com/#docs/symbol)
