:sparkles: feat(blog): 测试提交gitflow
Signed-off-by: liutongbin <liutb@haier.com>

--- a/_posts/2020-12-30-array.md
+++ b/_posts/2020-12-30-array.md
@@ -85,7 +85,82 @@ tags :
 5. Init:表示初始值
 #### 最长用到的就是pre和cur 用法实例
 `var arr = [3,9,4,3,6,0,9]`
-    求数组项之和
-        var sum = arr.reduce(function(prev,cur){
-            return pre + cur
-        },0)
+    ```javascript   
+    求数组项之和 
+    var sum = arr.reduce(function(prev,cur){
+        return pre + cur
+    },0)
+    //0+3+9+3+6+0+9
+    ```
+    ```javascript
+    求数组项最大值
+    var max = arr.reduce(function(prev,cur){
+        return Math.max(prev,cur)
+    })
+    由于未传入初始值，所以开始时prev的值为数组第一项3，cur的值为数组第二项9，取最大值后继续进入下一轮回调
+    ```
+    ```javascript
+    数组去重
+    var newArr = arr.reduce(function(prev,cur) {
+        prev.indexOf(cur) === -1 && prev.push(cur);
+        return prev
+    },[])
+    实现原理：
+    ① 初始化一个空数组
+    ② 将需要去重处理的数组中的第1项在初始化数组中查找，如果找不到（空数组中	肯定找不到），就将该项添加到初始化数组中
+    ③ 将需要去重处理的数组中的第2项在初始化数组中查找，如果找不到，就将该项	继续添加到初始化数组中
+    ④ ……
+	⑤ 将需要去重处理的数组中的第n项在初始化数组中查找，如果找不到，就将该项	继续添加到初始化数组中
+	⑥ 将这个初始化数组返回
+    ```
+
+### shift()
+从数组中删除第一个元素，并返回该元素，原始数组会被更改
+```javascript
+    var array = [1,2,3];
+    array.shift()
+    // 1
+    array
+    //[2,3]
+```
+
+### slice()
+返回一个新的数组对象，这一对象是一个由begin和end决定的原数组的浅拷贝，(包括begin，不包括end)，原始数组不变
+```javascript
+arr.slice(begin,end)
+// 当begin为负数时，表示从倒数第几个元素开始提取
+const animals = ['ant', 'bison', 'camel', 'duck', 'elephant'];
+
+console.log(animals.slice(2));
+// expected output: Array ["camel", "duck", "elephant"]
+
+console.log(animals.slice(2, 4));
+// expected output: Array ["camel", "duck"]
+
+console.log(animals.slice(1, 5));
+// expected output: Array ["bison", "camel", "duck", "elephant"]
+```
+
+### some()
+测试数组中是不是至少有一个元素通过了被提供的函数测试，返回Boolean类型的值，方法数组中只要有一个为真，返回的就是true，反之则为false
+```javascript
+[2, 5, 8, 1, 4].some(x => x > 10);  // false
+[12, 5, 8, 1, 4].some(x => x > 10); // true
+```
+
+### splice()
+通过删除或者替换现有元素或者原地添加新的元素来修改数组，并以数组形式返回被修改的内容，原数组会改变
+```javascript
+const months = ['Jan', 'March', 'April', 'June'];
+months.splice(1, 0, 'Feb');
+// inserts at index 1
+console.log(months);
+// expected output: Array ["Jan", "Feb", "March", "April", "June"]
+
+months.splice(4, 1, 'May');
+// replaces 1 element at index 4
+console.log(months);
+// expected output: Array ["Jan", "Feb", "March", "April", "May"]
+
+```
+
