--- a/_posts/2020-12-30-array.md
+++ b/_posts/2020-12-30-array.md
@@ -12,7 +12,7 @@ tags :
 ---
 ### from()
 从类数组对象或者可迭代对象中创建一个新的数组实例,属于潜拷贝
-![image.png](https://i.loli.net/2020/12/30/VOjgEySdAHcbkMZ.png)
+<!-- ![image.png](https://i.loli.net/2020/12/30/VOjgEySdAHcbkMZ.png) -->
 
 ### fill()
 用一个固定值填充一个数组中从起始索引到终止索引内的全部元素
