:sparkles: feat(修改日期):
Signed-off-by: liutongbin <liutb@haier.com>

--- a/_posts/2021-1-1-array.md
+++ b/_posts/2021-1-1-array.md
@@ -1,8 +1,8 @@
 ---
 layout:     post
-title:      JAVASCRIPT
+title:      JS
 subtitle:   array相关
-date:       2020-12-30
+date:       2021-1-1
 author:     "binn"
 header-img: "https://i.loli.net/2020/04/01/OGmz4tWRHn2ql7D.jpg"
 comments: true
@@ -10,10 +10,6 @@ comments: true
 tags :
     - 基础
 ---
-### from()
-从类数组对象或者可迭代对象中创建一个新的数组实例,属于潜拷贝
-<!-- ![image.png](https://i.loli.net/2020/12/30/VOjgEySdAHcbkMZ.png) -->
-
 ### fill()
 用一个固定值填充一个数组中从起始索引到终止索引内的全部元素
 `array.fill(value,start,end)`
