:bug:fix(blog): 换回原来的enc文件，提交测试
Signed-off-by: liutongbin <liutb@haier.com>

--- a/_posts/2021-01-01-array.md
+++ b/_posts/2021-01-01-array.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      JQueryArray
-subtitle:   array相关
+subtitle:   array相关test
 date:       2021-01-01
 author:     "binn"
 header-img: "https://i.loli.net/2020/04/01/OGmz4tWRHn2ql7D.jpg"
