:sparkles: feat(blog): 完善了array方面的api
Signed-off-by: liutongbin <liutb@haier.com>

--- a/_posts/2021-01-01-array.md
+++ b/_posts/2021-01-01-array.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      JQueryArray
-subtitle:   array相关test2
+title:      JS Array
+subtitle:   array
 date:       2021-01-01
 author:     "binn"
 header-img: "https://i.loli.net/2020/04/01/OGmz4tWRHn2ql7D.jpg"
@@ -10,6 +10,14 @@ comments: true
 tags :
     - 基础
 ---
+### from()
+从类数组对象或者可迭代对象中创建一个新的数组实例（属于浅拷贝）
+```javascript
+    array.form('foo')
+    // ['f','o','o']
+    array.from('1','2','3')
+    // ['1','2','3']
+```
 ### fill()
 用一个固定值填充一个数组中从起始索引到终止索引内的全部元素
 `array.fill(value,start,end)`
@@ -157,7 +165,35 @@ months.splice(4, 1, 'May');
 // replaces 1 element at index 4
 console.log(months);
 // expected output: Array ["Jan", "Feb", "March", "April", "May"]
-
-
 ```
+### toLocalString()
+返回一个字符串表示数组中的元素，数组中的元素将使用各自的toLocaleString方法转换成字符串吗，这些字符串将使用一个特定语言环境的字符串
 
+```javascript
+    const array = [1,'a',new Date('12 Dec 1997 14:12:00 UTC')];
+    // [1, "a", Fri Dec 12 1997 22:12:00 GMT+0800 (中国标准时间)]
+    const localeString = array.toLocaleString('en',{timeZone:'UTC'});
+    // "1,a,12/12/1997, 2:12:00 PM"
+    // en:代表时间格式：英国、美国等默认的时间格式
+    // timeZone:代表的是时区，UTC代表的是默认时区
+```
+### toSource()
+返回一个字符串，代表该数组的源代码
+```javascript
+// array.toSource()
+var alpha = newArray('a','b','c');
+alpha.toSource()
+// ['a','b','c']
+```
+### values()
+返回一个新的array iterator对象，该对象包含每个索引的值
+```javascript
+const array = ['a','b','c'];
+const iterator = array.values() // 返回的是一个对象
+for(const value of iterator) {
+    console.log(value)
+}
+// "a"
+// "b"
+// "c"
+```
