:bug:fix(blog): 更新了array相关的api内容
Signed-off-by: liutongbin <liutb@haier.com>

--- a/_posts/2021-01-01-array.md
+++ b/_posts/2021-01-01-array.md
@@ -20,63 +20,134 @@ tags :
 ```
 ### fill()
 用一个固定值填充一个数组中从起始索引到终止索引内的全部元素
-`array.fill(value,start,end)`
+```javascript
+array.fill(value,start,end)`
 1. Value:用来填充数数组元素的值；
 2. Start：起始索引，默认是0；可选
 3. End：终止索引，默认为this.length 可选
-![image.png](https://i.loli.net/2020/12/30/59wjCzL8MyVKFip.png)
+```
+```javascript
+var array = [1,2,3,4,5]
+// array.fill(0,2,4)
+// [1,2,0,0,5]
+// array.fill(5,1)
+// [1,5,5,5,5]
+// array.fill(6)
+// [6,6,6,6,6]
+```
 
 ### filter()
 创建一个新的数组，其包含通过所提供函数实现的测试的所有元素,不会	改变原数组
-
-`const words = ['spray', 'limit', 'elite', 'exuberant', 'destruction', 'present'];`
-
-`const result = words.filter(word => word.length > 6);`
-
-`console.log(result);`
-
-`// expected output: Array ["exuberant", "destruction", "present"]`
+```javascript
+const words = ['spray', 'limit', 'elite', 'exuberant', 'destruction', 'present'];
+const result = words.filter(word => word.length > 6);
+console.log(result);
+// expected output: Array ["exuberant", "destruction", "present"]
+```
 
 ### find()
 返回数组中满足提供的测试函数的第一个元素的值，不会改变原数组
-![image.png](https://i.loli.net/2020/12/30/2EX4h73K9zVd86o.png)
-
+```javascript
+var array = [5,12,8,130,44]
+array.find(element => element > 100)
+// 12
+// array [5,12,8,130,44] 未改变原数组
+```
 ### findIndex()
 返回数组中满足提供的测试函数的第一个元素的索引，若没有找到对应元素则返回-1
 #### 应用场景：检索元素是否存在，用-1来做判断
-![image.png](https://i.loli.net/2020/12/30/TDzyRx9jIGPhHoW.png)
+```javascript
+var array = [5,12,8,130,44]
+array.findIndex(element => element > 13)
+// 3
+array.findIndex(element => element > 200)
+// -1
+```
 
 ### flat()
 用于将嵌套的数组拉平，组成一个新数组
 `var newArray = arr.flat([depth]),depth:指定要提取嵌套数组的结构深度，默认	值是1 ,(Infinity，比较特殊，无论嵌套多少层都会转换成1维数组i)`
-![image.png](https://i.loli.net/2020/12/30/bQjTGXu4gypzswB.png)
-![image.png](https://i.loli.net/2020/12/30/peyzKoLlY2arbhs.png)
+```javascript
+const arr = [0,1,2,[3,4]]
+arr.flat()
+// [0,1,2,3,4]
+var arr2 = [0,1,2,[[[3,4]]]]
+arr2.flat(2)
+// [0,1,2,[3,4]]
+arr2.flat(3)
+// [0,1,2,3,4]
+arr2.flat(Infinity)
+// [0,1,2,3,4,5]
+```
 
 ### flatMap()
 对原数组的每个成员执行一个函数，对返回值组成的数组执行一次flat方法，flatMap只能展开一层数组
-![image.png](https://i.loli.net/2020/12/30/idKQn3jqceUk9LA.png)
-![image.png](https://i.loli.net/2020/12/30/YMwXKvxda6CBTAo.png)
+```javascript
+var arr = [1,2,3,4];
+arr.map(x => [x * 2])
+// [[2],[4],[6],[8]]
+arr.flatMap(x => [x * 2])
+// [2,4,6,8]
+arr.flatMap(x => [[x * 2]])
+// [[2],[4],[6],[8]]
+```
 
 ### includes()
 判断一个数组中是否包含一个指定的值
-![image.png](https://i.loli.net/2020/12/30/yLaEHZGeDx2onVc.png)
-
+```javascript
+const array = [1,2,3];
+array.includes(2)
+// true
+const pets = ['cat','dog','bat']
+pets.includes('cat')
+// true
+pets.includes('at')
+// false
+```
 ### indexOf()
 返回在数组中可以找到一个给定元素的第一个索引，如果不存在，返回(-1)
-![image.png](https://i.loli.net/2020/12/30/3Xn9blSyMvNi7he.png)
-
+```javascript   
+var beasts= ['ant','bison','camel','duck','bison']
+beasts.includes('ant')
+// true
+beasts.includes('camel')
+// true
+beasts.indexOf('camel')
+// 2
+beasts.indexOf('bison')
+// 1
+beasts.indexOf('sss')
+// -1
+```
 ### lastIndexOf()
 返回指定元素在数组中的最后一个的索引，如果不存在返回-1
-![image.png](https://i.loli.net/2020/12/30/aBQb6d42YsWxqJC.png)
-
+```javascript
+const animals = ['Dodo','Tiger','Penguin','Dodo']
+animals.lastIndexOf('Dodo')
+// 3
+animals.lastIndexOf('Tiger')
+// 1
+```
 ### join()
 将一个数组的所有元素连接成一个字符串并返回这个字符串
-![image.png](https://i.loli.net/2020/12/30/bPeCYqxMAUZ9QrE.png)
-
+```javascript
+const elements = ['Fire','Air','Water'];
+elements.join()
+// "Fire,Air,Water"
+elements.join('')
+// "FireAirWater"
+elements.join('-')
+// "Fire-Air-Water"
+```
 ### pop()
 从一个数组中删除并返回最后一个元素，原数组会被改变
-![image.png](https://i.loli.net/2020/12/30/3jlyprzK6OYxhCs.png)
-
+```javascript
+var plants = ['broccoli','cauliflower','cabbage','kale','tomato']
+plants.pop() //会改变原数组
+// tomato
+plants
+// ['broccoli','cauliflower','cabbage','kale']
+```
 ### reduce()
 对数组中的每个元素执行一个由您提供的reducer函数，将其结果汇总为单个返回值
 `arr.reduce(function(pre,cur) {
