--- a/_posts/2021-01-01-array.md
+++ b/_posts/2021-01-01-array.md
@@ -13,9 +13,9 @@ tags :
 ### from()
 从类数组对象或者可迭代对象中创建一个新的数组实例（属于浅拷贝）
 ```javascript
-    array.form('foo')
+    Array.form('foo')
     // ['f','o','o']
-    array.from('1','2','3')
+    Array.from('1','2','3')
     // ['1','2','3']
 ```
 ### fill()
