:sparkles: feat(blog): leetcode刷题
Signed-off-by: liutongbin <liutb@haier.com>

--- a/_posts/2021-01-06-object.md
+++ b/_posts/2021-01-06-object.md
@@ -106,5 +106,54 @@ const arr = [ ['0', 'a'], ['1', 'b'], ['2', 'c'] ];
 const obj = Object.fromEntries(arr);
 console.log(obj); // { 0: "a", 1: "b", 2: "c" }
 
+```
+### Object.is()
+判断两个值是否为同一个值
+`Object.is(value1,value2) //返回值：一个 Boolean 类型标示两个参数是否是同一个值。`
+`// value1:被比较的第一个参数`
+`// value2:被比较的第二个参数`
 
+### Object.isExtensible()
+判断一个对象是否是可扩展（是否可以哎它上面添加新的属性）
+`Object.isExtensible(obj)`
+```javascript
+// 新对象默认是可扩展的.
+var empty = {};
+Object.isExtensible(empty); // === true
+
+// ...可以变的不可扩展.
+Object.preventExtensions(empty);
+Object.isExtensible(empty); // === false
+
+// 密封对象是不可扩展的.
+var sealed = Object.seal({});
+Object.isExtensible(sealed); // === false
+
+// 冻结对象也是不可扩展.
+var frozen = Object.freeze({});
+Object.isExtensible(frozen); // === false
+```
+### Object.isFrozen()
+判断一个对象是否被冻结
+`Object.isFrozen(obj)`
+```javascript
+// 一个对象默认是可扩展的,所以它也是非冻结的.
+Object.isFrozen({}); // === false
+
+// 一个不可扩展的空对象同时也是一个冻结对象.
+var vacuouslyFrozen = Object.preventExtensions({});
+Object.isFrozen(vacuouslyFrozen) //=== true;
+
+// 一个非空对象默认也是非冻结的.
+var oneProp = { p: 42 };
+Object.isFrozen(oneProp) //=== false
+
+// 让这个对象变的不可扩展,并不意味着这个对象变成了冻结对象,
+// 因为p属性仍然是可以配置的(而且可写的).
+Object.preventExtensions(oneProp);
+Object.isFrozen(oneProp) //=== false
+
+// 此时,如果删除了这个属性,则它会成为一个冻结对象.
+delete oneProp.p;
+Object.isFrozen(oneProp) //=== true
 ```
